// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Actions Action and method 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-a-c4=""
  >
    <button
      _ngcontent-a-c4=""
    >
      Action and Method
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Addon|Actions Action only 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-button-component
    _nghost-a-c3=""
  >
    <button
      _ngcontent-a-c3=""
    >
      Action only
    </button>
  </storybook-button-component>
</storybook-dynamic-app-root>
`;
